# peplus

./: CMakeLists.txt  README.md
cmake/: PEPlusConfig.cmake
include/peplus/: any_buffer.hpp  file_image.hpp  headers.hpp  image_common.hpp  local_buffer.hpp  memory_buffer.hpp  pointed_value.hpp  version.hpp.cmake  virtual_image.hpp
include/peplus/detail/: entry_range.hpp  image_base.hpp  image_helpers.hpp  image_offset.hpp  transform_range.hpp
include/peplus/detail/facades/: base_relocation_facade.hpp  export_directory_facade.hpp  import_descriptor_facade.hpp  resource_directory_facade.hpp  runtime_function_facade.hpp  tls_directory_facade.hpp
